--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-esri-map-toc",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "homepage": "https://github.com/Kollibri/angular-esri-map-toc",
   "authors": [
     "kollibri <mander77@gmail.com>"
@@ -23,6 +23,6 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.0"
+    "angular": "^1.3.0"
   }
 }
