--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,15 @@
 {
   "name": "angular-esri-map-toc",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "homepage": "https://github.com/Kollibri/angular-esri-map-toc",
   "authors": [
     "kollibri <mander77@gmail.com>"
   ],
   "description": "A table of contents directive for use as a plugin to the https://github.com/Esri/angular-esri-map library.",
-  "main": "angular-esri-map-toc.js",
+  "main": [
+    "angular-esri-map-toc.js",
+    "angular-esri-map-toc.css"
+  ],
   "moduleType": [],
   "keywords": [
     "angular",
