--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
   ],
   "dependencies": {
     "angular": "^1.3.0",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-esri-map": "~1.0.0-beta.5"
   }
 }
