--- a/bower.json
+++ b/bower.json
@@ -20,10 +20,12 @@
   "license": "Apache",
   "ignore": [
     "**/.*",
+    "app",
+    "src",
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "gulpfile.js"
   ],
   "dependencies": {
     "angular": "^1.3.0",
